[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "djlint"
version = "1.36.4"
description = "HTML Template Linter and Formatter"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
maintainers = [
  { name = "Christopher Pickering" },
  { name = "monosans", email = "hsyqixco@protonmail.com" },
]
authors = [{ name = "Christopher Pickering" }]
requires-python = ">=3.10"
classifiers = [
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Typing :: Typed",
]
dependencies = [
  "click>=8.0.1",
  "colorama>=0.4.4",
  "cssbeautifier>=1.14.4",
  "jsbeautifier>=1.14.4",
  "json5>=0.9.11",
  "pathspec>=0.12",
  "pyyaml>=6",
  "regex>=2023",
  "tomli>=2.0.1; python_version<'3.11'",
  "tqdm>=4.62.2",
  "typing-extensions>=3.7.4; python_version<'3.11'",
]
urls.documentation = "https://djlint.com"
urls.repository = "https://github.com/djlint/djLint"
scripts.djlint = "djlint:main"

[dependency-groups]
dev = [
  "mypy[faster-cache]==1.19.1",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "pytest-github-actions-annotate-failures==0.3",
  "pytest-xdist==3.8",
  "ruff==0.14.13",
  "tomli==2.4.0",
  "types-colorama==0.4.15.20250801",
  "types-pyyaml==6.0.12.20250915",
  "types-regex==2026.1.15.20260116",
  "types-tqdm==4.67.0.20250809",
  "typing-extensions==4.15.0",
]

[tool.hatch.build.targets.sdist]
include = ["djlint", "mypy.ini"]

[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = [
  "hatch-mypyc",
  "click",
  "cssbeautifier",
  "jsbeautifier",
  "json5",
  "types-colorama",
  "types-pyyaml",
  "types-regex",
  "types-tqdm",
  "typing-extensions",
]
enable-by-default = false
exclude = ["djlint/__main__.py"]
options = { opt_level = "3", debug_level = "0" }

[tool.cibuildwheel]
build = "cp*"
build-frontend = "build[uv]"
environment.HATCH_BUILD_HOOK_ENABLE_MYPYC = "1"
skip = ["*-manylinux_i686", "*-musllinux_*", "*-win32"]
