[project]
name = "djlint"
version = "1.40.6"
description = "HTML Template Linter and Formatter"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Christopher Pickering" }]
maintainers = [
  { name = "Christopher Pickering" },
  { name = "monosans", email = "hsyqixco@protonmail.com" },
]
classifiers = [
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Typing :: Typed",
]
urls.documentation = "https://djlint.com"
urls.repository = "https://github.com/djlint/djLint"
scripts.djlint = "djlint:main"
dependencies = [
  "click>=8.2.0",
  "cssbeautifier>=1.13.0",
  "jsbeautifier>=1.13.0",
  "json5>=0.10.0",
  "pathspec>=0.9.0",
  "pyyaml>=5.1",
  "regex>=2022.6.2",
  "tomli>=0.2.0; python_version<'3.11'",
  "typing-extensions>=3.7.4; python_version<'3.11'",
]

[dependency-groups]
dev = [
  "covdefaults==2.3.0",
  "mypy==2.2.0",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "pytest-github-actions-annotate-failures==0.4.2",
  "pytest-xdist==3.8",
  "ruff==0.15.21",
  "tomli==2.4.1",
  "types-pyyaml==6.0.12.20260518",
  "types-regex==2026.7.10.20260711",
  "typing-extensions==4.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.cibuildwheel]
build = "cp*"
build-frontend = "build[uv]"
environment.HATCH_BUILD_HOOK_ENABLE_MYPYC = "1"

[tool.hatch.build.targets.sdist]
include = ["djlint", "mypy.ini"]

[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = [
  "hatch-mypyc",
  "click",
  "cssbeautifier",
  "jsbeautifier",
  "json5",
  "types-pyyaml",
  "types-regex",
  "typing-extensions",
]
enable-by-default = false
exclude = ["src/djlint/__main__.py"]
options = { opt_level = "3", debug_level = "0" }

[tool.uv]
exclude-newer = "3 days"
